--- a/index.html
+++ b/index.html
@@ -2,44 +2,89 @@
 
 <html lang=eng>
   
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Free Code Camp Helsinki</title>
-  <meta name="description" content="Animal theme park website" />
-  <!--Just a little homage to Terry Pratchett-->
-  <!--This will fail the w3c validator, but it's a known issue.-->
-  <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
-  <link rel="stylesheet" href="Stylesheets/style.css">
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Free Code Camp Helsinki</title>
+  
+    <!--Include handlebars.js-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js" 
+    integrity="sha512-RNLkV3d+aLtfcpEyFG8jRbnWHxUqVZozacROI4J2F1sTaDqo1dPQYs01OMi1t1w9Y2FdbSCDSQ2ZVdAC8bzgAg=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"></script>
+
+    <!--Include Font Awesome-->
+    <script src="https://kit.fontawesome.com/3c500845f7.js" crossorigin="anonymous"></script>
+  
+    <meta name="description" content="Demo site for Free Code Camp Helsinki" />
+    <!--Just a little homage to Terry Pratchett-->
+    <!--This will fail the w3c validator, but it's a known issue.-->
+    <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
+    <link rel="stylesheet" href="stylesheets/style.css">
+  </head>
 
 <body>
   <header>
-    <nav>
+    <nav id="navbar">
         <div class="nav-link-wrapper">
-          <a href="index.html">Home</a>
+          <a href="index.html"><i class="fas fa-home nav-icon"></i><p class="navText">Home</p></a>
         </div>
         <div class="nav-link-wrapper">
-          <a href="meetups.html">Meetups</a>
+          <a href="meetups.html"><i class="fas fa-users nav-icon"></i><p class="navText">Meetups</p></a>
         </div>
         <div class="nav-link-wrapper">
-          <a href="challenges.html">Challenges</a>            
+          <a href="challenges.html"><i class="fas fa-question-circle nav-icon"></i><p class="navText">Challenges</p></a>            
         </div>
         <div class="nav-link-wrapper">
-          <a href="articles.html">Articles</a>
+          <a href="articles.html"><i class="fas fa-newspaper nav-icon"></i><p class="navText">Articles</p></a>
         </div>
         <div class="nav-link-wrapper">
-          <a href="jobs.html">Jobs</a>
+          <a href="jobs.html"><i class="fas fa-building nav-icon"></i><p class="navText">Jobs</p></a>
         </div>
     </nav>
   </header>
 
-  <main>
+  <main class="app">
+    <h1>Welcome to Free Code Camp Helsinki</h1>
+    <h2>Meetups</h2>
+    <ul id="meetup-scroll" class="scroll-wrapper full"></ul>
+      <script id="scroll-template" type="text/x-handlebars-template">
+        {{#each meetupList}}
+          <li class="card">{{this}}</li>
+        {{/each}}
+      </script>
+    </ul>
+
+    <h2>Jobs</h2>
+    <div id="jobs">Job info here</div>
+
+    <h2>Check out this week's coding challenge</h2>
+    <div id="challenge">Coding challeng info here</div>
+
+    <h2>Articles</h2>
+    <div id="articles">Click here for articles</div>
+
+    <h3>About us</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed viverra
+      porta urna sit amet semper. Nullam posuere, ipsum in ultrices vehicula,
+      dui tellus volutpat ante, a vestibulum tortor ligula id neque. Donec eu
+      sollicitudin nulla, vitae varius orci. Fusce fringilla, nibh sit amet
+      elementum pellentesque, felis risus aliquet felis, eget lacinia nunc
+      tortor vitae lorem. Praesent interdum dolor eu purus condimentum
+      condimentum. Fusce lorem quam, convallis id est ut, varius volutpat
+      ligula. Nullam vulputate nibh vitae ipsum fringilla, ut sodales enim
+      malesuada. Etiam ultricies mauris a arcu efficitur tincidunt. Quisque
+      aliquam lobortis sapien, vitae pellentesque ante tempus sed. Phasellus
+      a laoreet diam. Aenean congue ipsum augue, eu semper nisi
+      consectetur a.</p>
+
 
   </main>
 
   <footer>
-    
+    <!--Run main.js first to do all the handlebars templating-->
+    <script src="scripts/main.js"></script>
+    <script src="scripts/horizontal-scroll.js"></script>
   </footer>
 </body>
 
