--- a/meetups.html
+++ b/meetups.html
@@ -45,23 +45,31 @@
   </header>
 
   <main class="app">
+    <h1>Meetups</h1>
     <iframe id="meetup-calendar"
       title="Meetup Calendar"
       src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=Europe%2FHelsinki&src=NXZjcmkxdGRzZHJydDBzY2JudWQ0Y2VwZ3NAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%23F4511E"
       scrolling="no"></iframe>
 
+      <h2 id="prev-meetups">Previous meetups</h2>
       <ul id="meetups-list">
         <script id="previous-meetups" type="text/x-handlebars-template">
           {{#each meetup}}
-            <li class="meetup">{{this}}</li>
+            <li class="meetup">
+              <div class="meetup-card">
+              <h3>{{this.title}}</h3>
+              <h4>{{this.date}}</h4>
+              <p>{{this.description}}</p>
+              </div>
+            </li>
           {{/each}}
         </script>
       </ul>
   </main>
 
   <footer>
-    <!--Run main.js first to do all the handlebars templating-->
-    <script src="scripts/main.js"></script>
+    <!--Run meetups.js first to do all the handlebars templating-->
+    <script src="scripts/meetups.js"></script>
     
   </footer>
 </body>
