--- a/challenges.html
+++ b/challenges.html
@@ -45,11 +45,61 @@
   </header>
 
   <main class="app">
+    <h1>Weekly Challenge</h1>
+    <div id="weekly-challenge">
+      <h2>Removing duplicates from a sorted list.</h2>
+      <p>You are given a pointer to the head of a sorted,
+        single-linked list. The task is to remove any nodes with
+        duplicate values, so that each element only appears once in
+        the list.</p>
+      <br>
+      <p>Discuss this problem on 
+        <a href="https://www.facebook.com/groups/free.code.camp.helsinki/">Facebook</a>.</p>
+      <figure class="challenge-example">
+          <img src="src/Challenge example.jpg"
+          alt="A figure showing four nodes in the first list with a duplicate, and then a second list with 3 nodes where the duplicate is removed.">
+        <figcaption>Example: You need to remove one of the nodes with the value 3 from the first list and return the second list.</figcaption>
+      </figure>
+    </div>
 
+    <!--TODO Add real text and a real solution-->
+    <div id="hint-wrapper">
+    <h3>Need a hint?</h3>
+    <button class="accordion-hint"><i class="fas fa-chevron-right"></i> Hint 1</button>
+    <div class="hint">
+      <p>This is the first hint. Lorem ipsum dolor sit amet, consectetur 
+        adipiscing elit. Mauris non nibh sit amet nunc pulvinar vulputate. 
+        Etiam ac nunc varius, varius nunc eu, hendrerit lectus. Cras suscipit 
+        mauris non tellus posuere ultricies. Integer ac accumsan metus. In 
+        pellentesque, mauris nec condimentum ullamcorper, nunc eros vehicula 
+        odio, eget consequat metus mi eu nunc.</p>
+    </div>
+
+    <button class="accordion-hint"><i class="fas fa-chevron-right"></i> Hint 2</button>
+    <div class="hint">
+      <p>This is the second hint. Lorem ipsum dolor sit amet, consectetur 
+        adipiscing elit. Mauris non nibh sit amet nunc pulvinar vulputate. 
+        Etiam ac nunc varius, varius nunc eu, hendrerit lectus. Cras suscipit 
+        mauris non tellus posuere ultricies. Integer ac accumsan metus. In 
+        pellentesque, mauris nec condimentum ullamcorper, nunc eros vehicula 
+        odio, eget consequat metus mi eu nunc.</p>
+    </div>
+
+    <button class="accordion-hint"><i class="fas fa-chevron-right"></i> Hint 3</button>
+    <div class="hint">
+      <p>This is the third hint. Lorem ipsum dolor sit amet, consectetur 
+        adipiscing elit. Mauris non nibh sit amet nunc pulvinar vulputate. 
+        Etiam ac nunc varius, varius nunc eu, hendrerit lectus. Cras suscipit 
+        mauris non tellus posuere ultricies. Integer ac accumsan metus. In 
+        pellentesque, mauris nec condimentum ullamcorper, nunc eros vehicula 
+        odio, eget consequat metus mi eu nunc.</p>
+    </div>
+    </div>
   </main>
 
   <footer>
-    
+    <!--Run this script to add logic to accordion.-->
+    <script src="scripts/accordion.js"></script>
   </footer>
 </body>
 
